5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1871_1713.log
== TEST (2019-07-02 16:02:39) 
-- CODE:
from numpy impor *
notas = array(eval(int(input("Digite as notas dos alunos: "))))
media = mean(notas[:,1])
print(round(media, 2))
-- ERROR:
File "XXXX", line 1
    from numpy impor *
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:02:49) 
-- CODE:
from numpy import *
notas = array(eval(int(input("Digite as notas dos alunos: "))))
media = mean(notas[:,1])
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:03:16) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos alunos: ")))
media = mean(notas[:,1])
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:03:27) 
-- CODE:
from numpy import *
notas = array(eval(input("Digite as notas dos alunos: ")))
media = mean(notas[:,1])
print(round(media, 2))
-- EXECUTION TIME:
1.05564
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
4.1
---- user output:
4.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
